# shuttle-dioxus-axum-ex

./: Cargo.toml  Shuttle.toml
src/: main.rs
