[package]
name = "dxtest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.8"
dioxus = {git = "https://github.com/dioxuslabs/dioxus"}
dioxus-fullstack = { git = "https://github.com/dioxuslabs/dioxus", features = ["axum", "ssr", "router"] }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus", version = "0.4.1" }
dioxus-ssr = {git = "https://github.com/dioxuslabs/dioxus"}
serde = { version = "1.0.182", features = ["derive"] }
shuttle-axum = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-shared-db = { version = "0.23.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.28.2"
tracing = "0.1.37"
